# qubit_mvc_framework

./: .gitignore  CMakeLists.txt  README.md  app.cpp  cachefiles.cpp  formdata.cpp  middleware.cpp  qrtdatabase.cpp  queues.cpp  redirect.cpp  sanitizer.cpp  secure.cpp  session.cpp  utilities.cpp
include/qubit_mvc_framework/config/: app.h
include/qubit_mvc_framework/models/: job_fail_model.h  migration_model.h  user_model_impl.h
include/qubit_mvc_framework/utilities/: cachefiles.h  common_p.h  controller.h  core_functions.h  extra_defined_fmt.h  formdata.h  google-services.json.h  google_token_auth.h  integrity.h  middleware.h  migrator.h  qfirebaseapp.h  qrtdatabase.h  queues.h  redirect.h  sanitizer.h  secure.h  sequences.h  session.h  system_settings.h  watcher.h
include/qubit_mvc_framework/utilities/model/: db_info.h  macros.h  model.h  model_base.h  model_base_data.h  model_base_impl.h  model_base_impl_sql.h  model_relationships.h  sql_operator.h  sql_query.h  table_attribute.h  table_attribute_base.h  table_attribute_impl.h  table_base.h  table_base_impl.h
include/qubit_mvc_framework/utilities/model/sample_models/: job_fail_model.h  job_model.h  migration_history.h
model/: model_privates.cpp
qubit_mvc_framework/utilities/: utilities.h
